<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.okebenoithub.android.www.ui.fragments.home.viewModel.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.HomeFragment">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_bg_app_color"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                style="@style/NestedScrollBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/layout_left_margin"
                    android:paddingTop="16dp"
                    android:paddingEnd="@dimen/layout_right_margin"
                    android:paddingBottom="16dp">

                    <!-- Header -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/header_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_heavy"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/welcome_to_androidhub"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color" />
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:id="@+id/app_icon"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_icon_image"
                        android:scaleType="fitCenter"
                        android:src="@drawable/sde"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/header_title" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/aboutHead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="1dp"
                        app:layout_constraintTop_toBottomOf="@id/app_icon">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_medium"
                            android:gravity="start"
                            android:padding="8dp"
                            android:text="@string/about_app_message"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@android:color/darker_gray" />
                    </androidx.cardview.widget.CardView>

                    <View
                        android:id="@+id/separator0"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_separator_bg_color"
                        app:layout_constraintBottom_toTopOf="@id/aboutHead" />

                    <TextView
                        android:id="@+id/aboutApp1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/white"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/lives_born_in_text"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/about_content_color"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@id/aboutHead" />

                    <View
                        android:id="@+id/separator1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_separator_bg_color"
                        app:layout_constraintTop_toBottomOf="@id/aboutApp1" />

                    <TextView
                        android:id="@+id/aboutApp2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/contact_email_text"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/about_content_color"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@id/separator1" />

                    <View
                        android:id="@+id/separator2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_separator_bg_color"
                        app:layout_constraintTop_toBottomOf="@id/aboutApp2" />

                    <TextView
                        android:id="@+id/aboutApp3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/contact_phones_text"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/about_content_color"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@id/separator2" />

                    <View
                        android:id="@+id/line_separator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_separator_bg_color"
                        app:layout_constraintTop_toBottomOf="@id/aboutApp3" />

                    <LinearLayout
                        android:id="@+id/buttonsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/line_separator">

                        <com.balysv.materialripple.MaterialRippleLayout
                            android:id="@+id/openCVBtnLayout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_round"
                            app:layout_constraintTop_toBottomOf="@id/aboutHead"
                            app:mrl_rippleColor="@color/colorPrimaryDark"
                            app:mrl_rippleHover="true"
                            app:mrl_rippleOverlay="true"
                            app:mrl_rippleRoundedCorners="20dp">

                            <Button
                                android:id="@+id/openCVBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@string/my_cv"
                                android:textColor="@color/button_text_colored"
                                android:textStyle="bold" />

                        </com.balysv.materialripple.MaterialRippleLayout>

                        <com.balysv.materialripple.MaterialRippleLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_round"
                            app:layout_constraintTop_toBottomOf="@id/aboutHead"
                            app:mrl_rippleColor="@color/colorPrimaryDark"
                            app:mrl_rippleHover="true"
                            app:mrl_rippleOverlay="true"
                            app:mrl_rippleRoundedCorners="20dp">

                            <Button
                                android:id="@+id/goToGitHubBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:text="@string/github"
                                android:textColor="@color/button_text_colored"
                                android:textStyle="bold" />

                        </com.balysv.materialripple.MaterialRippleLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/layout_left_margin"
                android:paddingTop="16dp"
                android:paddingEnd="@dimen/layout_right_margin"
                android:paddingBottom="16dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/goToProjectsFragmentLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_round_colored"
                    app:layout_constraintTop_toBottomOf="@id/aboutHead"
                    app:mrl_rippleColor="@color/colorPrimaryDark"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleRoundedCorners="20dp">

                    <Button
                        android:id="@+id/goToProjectsFragmentBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/projects_label_text"
                        android:textColor="@color/color_button_text"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_round_colored"
                    app:layout_constraintTop_toBottomOf="@id/aboutHead"
                    app:mrl_rippleColor="@color/colorPrimaryDark"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleRoundedCorners="20dp">

                    <Button
                        android:id="@+id/hireMeBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/hire_me"
                        android:textColor="@color/color_button_text"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>