<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.okebenoithub.android.www.ui.fragments.kotlinFlows.KotlinFlowsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.kotlinFlows.KotlinFlowsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_bg_app_color"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_left_margin"
            android:paddingTop="16dp"
            android:paddingEnd="@dimen/layout_right_margin"
            android:paddingBottom="16dp">

            <androidx.core.widget.NestedScrollView
                style="@style/NestedScrollBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Header -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/header_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:fontFamily="@font/lato_heavy"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/flow_data_test"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/about_content_color" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/flow_data_tv"
                        android:layout_marginTop="16dp"
                        android:text="@string/waiting_for_flow_of_data"
                        app:layout_constraintTop_toBottomOf="@id/header_title"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/collect_flow_data_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/collect"
                        app:layout_constraintTop_toBottomOf="@id/flow_data_tv"
                        tools:layout_editor_absoluteX="0dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>